# tapankaikki4

./: .gitignore  .hgignore  .travis.yml  CBullet.h  CDynGameData.h  CEffect.cpp  CGUIEffectData.cpp  CGameData.h  CGameDrawer.cpp  CGameDrawer.h  CGameMenuItem.h  CGameStatisticsData.h  CGameSubStateNextLevel.h  CGameSubStateOngoing.cpp  CGameVersion.h  CMakeLists.txt  COPYING  COptions.cpp  CPlayer.cpp  CSoundPlayer.cpp  CStatViewData.cpp  CState.h  CTargetSystemCrate.cpp  CWeaponCrate.cpp  ChangeLog  IPluginFactory.h  IPositionalSoundObserver.h  Makefile  MenuItems.cpp  README  README.md  lists.h  main.cpp  options.cfg  palette.tab  waf  wscript
Editor/: EditorDrawer.cpp  EditorTools.cpp  Makefile  StateEditLevel.h  StateEditRCData.cpp  editor.dsp  editor.sln  editor.vcproj
common/: CCoord.h  CDrawArea.h  CEnemyBase.h  CGameTypeData.h  CLightMap.h  CLightTable.h  CLinkedList.h  IBulletType.h  IEffectType.h  IEnemyType.h  Makefile  TypeInterfaces.cpp  linux.h
data/: Makefile  Makefile.inc  default.ini  options.cfg
data/efps/: RAMBO1.EFP  RAMBO4.EFP  bodyp.efp  bomb2.efp  crates.efp  eflogo.pcx  enemy8.efp  enemy9.efp  floor1.efp  floor2.generated.efp  menu.pcx  polycolr.efp  rambo2.efp  rectangle.pcx  shopback_hilite.efp  shopback_hollow.efp  victory.pcx  wall2.generated.efp  walls1.generated.efp  walls1_2.generated.efp  walls1_3.efp  walls1_5.efp
data/fnts/: 8x8b.fnt  menu15x18dark.fnt  menu25x30dark.fnt  menu25x30light.fnt
data/help/: readme.html
data/levs/: cave.lev  dm.lev  seacastle.lev  small.lev
efps/: RAMBO3.EFP  bslogo.pcx  floor1.generated.efp  runlog.txt  shopback_normal.efp  staticsback.efp  walls1.efp  walls1_1.generated.efp  walls1_4.generated.efp
fnts/: menu15x18gray.fnt  menu15x18light.fnt  menu25x30gray.fnt
levs/jailbreak/: level1.lev  level4.lev  level7.lev
src/: CBodyPart.cpp  CBodyPart.h  CBullet.cpp  CBullet.h  CBulletCrate.cpp  CBulletCrate.h  CCharacter.cpp  CCharacter.h  CCrate.cpp  CCrate.h  CDynGameData.cpp  CDynGameData.h  CDynShopData.cpp  CDynShopData.h  CEffect.cpp  CEffect.h  CEnemy.cpp  CEnemy.h  CEnergyCrate.cpp  CEnergyCrate.h  CEventFilter.cpp  CEventFilter.h  CGUIEffectData.cpp  CGUIEffectData.h  CGUIStateGame.cpp  CGUIStateGame.h  CGUIStateLogo.cpp  CGUIStateLogo.h  CGUIStateQuit.cpp  CGUIStateQuit.h  CGameApp.cpp  CGameApp.h  CGameData.cpp  CGameData.h  CGameDrawManager.cpp  CGameDrawManager.h  CGameDrawer.cpp  CGameDrawer.h  CGameGraphicsInterface.cpp  CGameGraphicsInterface.h  (+94 more)
src/Editor/: EditorBrush.cpp  EditorBrush.h  EditorClipBoard.cpp  EditorClipBoard.h  EditorClipBoardBlock.cpp  EditorClipBoardBlock.h  EditorDrawer.cpp  EditorDrawer.h  EditorEvent.cpp  EditorEvent.h  EditorGraphics.cpp  EditorGraphics.h  EditorLevelIO.cpp  EditorLevelIO.h  EditorLevelIO_gtk.cpp  EditorLevelIO_win32.cpp  EditorMagicSelection.cpp  EditorMagicSelection.h  (+38 more)
(+88 files in other folders)
